--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -1,8 +1,12 @@
 // Ref: https://github.com/nuxt-community/vuetify-module#customvariables
 //
 // The variables you want to modify
-// $font-size-root: 20px;
-@import url('https://fonts.googleapis.com/css2?family=Gideon+Roman&display=swap');
+// $font-size-root: 20px0;
+
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@600&display=swap');
+
 $body-font-family: Roboto !important;
 
 * {
