--- a/layouts/global.css
+++ b/layouts/global.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 @font-face {
     font-family: "Fira-code-bold";
     /* font-weight: 900; */
