--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -3,7 +3,7 @@
 // The variables you want to modify
 // $font-size-root: 20px0;
 
-@import url('https://fonts.googleapis.com/css2?family=Crimson+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@600&display=swap');
 
