--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -10,6 +10,9 @@
   --contact-link-bg-primary:rgba(255, 255, 255, 0.911);
   --contact-link-bg-secondary:rgba(255, 255, 255, 0.911);
   --contact-link-shadow-primary:rgba(116, 227, 235, 0.959);
+  --navbar-color:#56eefd;
+  --navbar-bg:#111;
+  --sdgcard-bg:#06508b;
 }
 @layer base {
   @font-face {
